# treadmill-gui

./: CMakeLists.txt  design_analysis_todo.txt
docs/: thread_architecture.puml
src/: DataPanel.cpp  DataPanel.h  SpeedControlPanel.cpp  SpeedControlPanel.h  TestingPanel.cpp  TestingPanel.h  ThemeManager.cpp  ThemeManager.h  TreadmillApp.cpp  TreadmillApp.h  main.cpp
src/core/: TreadmillApp.cpp  TreadmillApp.h
src/old (disregard)/: SerialManager.cpp  SerialManager.h
src/ui/: ThemeManager.cpp  ThemeManager.h
src/ui/panels/: DataPanel.cpp  DataPanel.h  SpeedControlPanel.cpp  SpeedControlPanel.h  TestingPanel.cpp  TestingPanel.h
src/utils/: FileManager.cpp  FileManager.h  SerialManager.cpp  SerialManager.h  TreadmillController.cpp  TreadmillController.h
test_serial_receive/: test_serial_receive.ino
treadmill_contoller_firmware/: treadmill_controller_firmware.ino
